--- a/grammar.html
+++ b/grammar.html
@@ -55,7 +55,7 @@ div.main{
 padding:20px;
 margin-top:30px;
 height:1500px;
-background-image:url("https://cdn.pixabay.com/photo/2015/12/26/08/20/red-1108405_640.jpg");
+background-image:url("bricks.jpg");
 background-size:2000px;
 background-repeat:none;
 }
